[package]
name = "daisy_bsp"
version = "0.1.0"
authors = ["Antoine van Gelder <antoine@flowdsp.io>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "A board support package for the Electro-Smith Daisy Seed"
repository = "https://github.com/antoinevg/daisy_bsp"
documentation = "https://github.com/antoinevg/daisy_bsp/wiki"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "cortex-m",
    "bsp",
    "stm32h7xx",
    "daisy",
]
readme = "README.md"

[package.metadata.docs.rs]
features = [ "seed", "pod", "petal", "patch", "field" ]
targets = ["thumbv7em-none-eabihf"]


# - dependencies --------------------------------------------------------------

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = { version = "0.6.13", features = ["device"] }
static-alloc = "0.2.1"
without-alloc = "0.2.1"
cty = "0.2.1"


# - select version of stm32h7xx-hal to use

[dependencies.stm32h7xx-hal]
package = "stm32h7xx-hal"
features = [ "stm32h750v", "rt", "revision_v" ]
version = "0.8.0"
optional = true

[dependencies.stm32h7xx-hal-dma]
package = "stm32h7xx-hal"
features = [ "stm32h750v", "rt", "revision_v" ]
git = "https://github.com/stm32-rs/stm32h7xx-hal.git"
rev = "0bfeeca4ce120c1b7c6d140a7da73a4372b874d8"
optional = true


# - optional dependencies used by examples

[dependencies.num]
version = "0.3.1"
default-features = false
features = [ "libm" ]
optional = true

[dependencies.num-derive]
version = "0.3.3"
default-features = false
optional = true

[dependencies.num-traits]
version = "0.2.14"
default-features = false
optional = true


# - dev dependencies ----------------------------------------------------------

[dev-dependencies]
panic-semihosting = { version = "0.5.6" }
cortex-m-semihosting = { version = "0.3.5" }


# - features ------------------------------------------------------------------

[features]
default = [ "seed", "audio_pac" ]
seed = []
pod = []
petal = []
patch = []
field = []
audio_pac = [ "stm32h7xx-hal" ]
audio_hal = [ "stm32h7xx-hal-dma" ]
uses_num = [ "num", "num-derive", "num-traits" ]


# - profiles ------------------------------------------------------------------

[profile.dev]
debug = true
incremental = false
opt-level = "s" # optimize for binary size
#opt-level = 1
#opt-level = 0

[profile.release]
debug = true
opt-level = "s" #  optimize for binary size


# - examples ------------------------------------------------------------------

[[example]]
name = "blinky_pac"
required-features = ["seed"]

[[example]]
name = "blinky_hal"
required-features = ["seed"]

[[example]]
name = "blinky_bsp"
required-features = ["seed"]

[[example]]
name = "button"
required-features = ["seed"]

[[example]]
name = "audio_passthrough"
required-features = ["seed"]

[[example]]
name = "audio_testsignal"
required-features = ["seed"]

[[example]]
name = "audio_midi"
required-features = ["seed", "uses_num"]

[[example]]
name = "serial"
required-features = ["seed"]
