[package]
name = "daisy_bsp"
version = "0.3.2"
authors = ["Antoine van Gelder <antoine@flowdsp.io>"]
edition = "2018"
license = "MIT"
description = "A board support package for the Electro-Smith Daisy Seed"
repository = "https://github.com/antoinevg/daisy_bsp"
documentation = "https://github.com/antoinevg/daisy_bsp/wiki"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "cortex-m",
    "bsp",
    "stm32h7xx",
    "daisy",
]
readme = "README.md"

[package.metadata.docs.rs]
features = [ "seed", "pod", "petal", "patch", "field" ]
targets = ["thumbv7em-none-eabihf"]


# - dependencies --------------------------------------------------------------

[dependencies]
cortex-m = "^0.7.1"
cortex-m-rt = { version = "^0.6.12", features = ["device"] }
stm32h7xx-hal = { version = "0.9.0", features = [ "stm32h750v", "rt", "revision_v", "usb_hs" ] }
static-alloc = "0.2.2"
without-alloc = "0.2.1"
cty = "0.2.1"


# - optional dependencies used by examples

[dependencies.num]
version = "0.3.1"
default-features = false
features = [ "libm" ]
optional = true

[dependencies.num-derive]
version = "0.3.3"
default-features = false
optional = true

[dependencies.num-traits]
version = "0.2.14"
default-features = false
optional = true


# - dev dependencies ----------------------------------------------------------

[dev-dependencies]
panic-semihosting = { version = "0.5.6" }
panic-itm = { version = "~0.4.1" }
panic-halt = "0.2.0"
cortex-m-semihosting = { version = "0.3.5" }


# - features ------------------------------------------------------------------

[features]
default = [ "seed" ]
seed = []
pod = []
petal = []
patch = []
field = []
audio_hal = []
log-itm = []
uses_num = [ "num", "num-derive", "num-traits" ]


# - profiles ------------------------------------------------------------------

[profile.dev]
debug = true
incremental = false
opt-level = "s" # optimize for binary size
#opt-level = 1
#opt-level = 0

[profile.release]
debug = true
opt-level = "s" #  optimize for binary size


# - examples ------------------------------------------------------------------

[[example]]
name = "blinky"
required-features = ["seed"]

[[example]]
name = "blinky_pac"
required-features = ["seed"]

[[example]]
name = "blinky_hal"
required-features = ["seed"]

[[example]]
name = "button"
required-features = ["seed"]

[[example]]
name = "audio_passthrough"
required-features = ["seed"]

[[example]]
name = "audio_testsignal"
required-features = ["seed"]

[[example]]
name = "audio_midi"
required-features = ["seed", "uses_num"]

[[example]]
name = "serial"
required-features = ["seed"]

[[example]]
name = "adc_hal"
required-features = ["seed"]

[[example]]
name = "adc_bsp"
required-features = ["seed"]

[[example]]
name = "itm"
required-features = ["seed", "log-itm"]
